calculator-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: calculator
  labels:
    app: calculator-app
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: calculator
  type: ClusterIP
